Добавляет мин апргрейд кода (required на input в form) + & в нужных местах

--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -42,12 +42,14 @@
     &--white {
         fill: var(--white-text-color);
       }
-}
 
-  .socials-list__link:hover .socials-list__icons,
-  .socials-list__link:focus .socials-list__icons {
+    .socials-list__link:hover &,
+    .socials-list__link:focus & {
     fill: var(--white-text-color);
   }
+}
+
+
   
   
   
