--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -44,9 +44,11 @@
     font-size: 0px;
   
     transition: fill var(--duration) var(--timing-function);
+  
+    .clients__link:hover &,
+    .clients__link:focus & {
+      fill: var(--accent-color);
+    }
   }
   
-  .clients__link:hover .clients__icon,
-  .clients__link:focus .clients__icon {
-    fill: var(--accent-color);
-  }
+  
